<resources>
    <string name="app_name">VoiceBook Call Recorder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="tab_inbox">INBOX</string>
    <string name="tab_favorite">SAVED</string>
    <string name="nav_cloud">Cloud account</string>
    <string name="nav_storage">Storage manager</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About app</string>
    <string name="nav_share">Share app</string>
    <string name="nav_more_option_title">More option</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="history">History</string>
    <string name="detail">Detail</string>
    <string name="add_contact">Add contacts</string>
    <string name="category_audio_name">Audio</string>
    <string name="out_put_file_type_description">Select output with file type which you save in storage</string>
    <string name="out_put_file_title">File format</string>
    <string name="audio_source">Audio Source</string>
    <string name="category_notification_name">Notification</string>
    <string name="enable_notication_title">Enable notification</string>
    <string name="enable_notication_decription">Show notification on status bar when recording</string>
    <string name="enable_always_ask_title">Always ask</string>
    <string name="enable_always_ask_description">Ask before each recorder call</string>
    <string name="category_filter_recorder">Filter recorder</string>
    <string name="mode_recorder_title">Mode recorder</string>
    <string name="mode_recorder_description">Select mode recorder for all number or contacts only.\.\.\.</string>
    <string name="priority_contacts_title">Priority Contacts</string>
    <string name="priority_contacts_description">Manage contacts will be record (only avaiable for Priority contacts mode)</string>
    <string name="inbox_size_title">Inbox size</string>
    <string name="inbox_size_description">Maximum record can save in storage.</string>
    <string name="save_recording_note_title">Save recording</string>
    <string name="save_recording_note_description">Save recording after call notes was added</string>
    <string name="category_more_option_name">More option</string>
    <string name="shake_cancel_record_title">Shake and recorder</string>
    <string name="shake_cancel_record_description">Shake device to automatic cancel record a current call.</string>
    <string name="enable_private_mode_title">Private mode</string>
    <string name="enable_private_mode_description">Enable password when open this app</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="beep_sound_when_record_title">Beep sound</string>
    <string name="beep_sound_when_record_description">Play beep sound during calling after each 30 seconds.</string>
    <string name="dialog_warning_disable_notification_message">Android might stop VoiceBook and cause it to stop recording calls.
        \n \nAre you sure you want to do this?</string>
    <string name="dialog_warning_over_inbox_limit_title">Warning</string>
    <string name="dialog_warning_over_inbox_limit_message">You are having total records over this limits.
                If you want to change limitation of the inbox,we need delete some old records .\n Are you sure delete old records?</string>
    <string name="note">Note</string>
    <string name="notification_stop_recording">Touch to disable recorder service</string>
    <string name="warning_unable_record">VoiceBook was unable to record</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device.
        (Usually because another application/service is using the microphone in the background)</string>
    <string name="string_warning_record_a_call">Do you want to record this call?</string>
    <string name="string_ok">OK</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_record">Record</string>
    <string name="player_note_hint">No note</string>
    <string name="unknow_number">Unknow Number</string>
    <string name="empty_histoty_page">No record</string>
    <string name="empty_contact_history">No history</string>
    <string name="waiting_load_content">Please wait..\.</string>
    <string name="header_context_menu">Select</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="selected_count">Selected</string>
    <string name="player_title">Record Player</string>
    <string name="player_history_label">CONTACT HISTORY FROM </string>
    <string name="player_save_success_notice">save note successful</string>
    <string name="player_save_unsuccess_notice">save note unsuccessful</string>
    <string name="player_history_from_inbox">INBOX</string>
    <string name="player_history_from_favorite">FAVORITE</string>
    <string name="ask_save_this_recording_dialog">Save this recording to Saved folder?</string>
    <string name="share_this_record_dialog_title">Share record file</string>
    <string name="contact_history_title">Contact history</string>
    <string name="priority_contact_title">Priority contact</string>
    <string name="dialog_detail_phone_number">Phone number: </string>
    <string name="dialog_detail_file_type">File type: </string>
    <string name="dialog_detail_file_size">Size: </string>
    <string name="dialog_detail_file_duration">Duration: </string>
    <string name="dialog_detail_file_path">Path: </string>
    <string name="file_is_not_exist">This file wasn\'t removed from Storage</string>
    <string name="dialog_request_overlay_permision_message">You need to grant access to </string>
    <string name="no_permission">Required permissions denied </string>
    <string name="permission_record_audio">record audio</string>
    <string name="permission_read_contacts">read contacts</string>
    <string name="permission_detect_new_call">detect new call</string>
    <string name="permission_read_call_status">read call status</string>
    <string name="permission_save_record_file">save record file</string>
    <string name="warning_device_no_support_voice_call">VoiceBook was unable to record some your last calls.
     Try restarting your phone or kill app which using microphone.
        If the problem occurs again that means your phone does not support call recording</string>
    <string name="warning_title">Warning</string>
    <string name="checkbox_dont_show_again">Don\'t show again</string>
    <string name="dialog_inform_limit_inbox_title">Important information</string>
     <string name="dialog_inform_limit_inbox_content"><b>The inbox keeps in the last 100 calls(as default value). You can set a different size in the settings</b>.
         \n\nVoiceBook deletes the calls that you don\'t want to save automatically so you don\'t have to do it manually.
         \n\nOnly the last 100 calls (as default value)are save in the inbox and if the inbox is full and a new call is recorded the oldest call in the inbox is automatically deleted.
         \n\nYou can save as many calls as you want(<b>by save record</b>).Keep in mind to save all your important calls so they wont be deleted automatically (<b>by add them to Saved folder</b>).</string>
    <string name="category_about_name">Information</string>
    <string name="about_app_version_title">App version</string>
    <string name="about_app_license_title">License</string>
    <string name="about_app_get_all_app_title">All application</string>
    <string name="about_app_get_all_app_description"></string>
    <string name="category_contact_us_name">Contact us</string>
    <string name="feedback">Feedback</string>
    <string name="about_app_feedback_title">Feedback &amp; Error reporting</string>
    <string name="about_app_f_on_googleplus_title"></string>
    <string name="about_app_translation_title">Translation</string>
    <string name="about_app_translation_description">Would you like to translate this app to your own language?Please send email us to request form translate.</string>
    <string name="about_app_translation_body">I would like to translate this app to :</string>
    <string name="library_license"><b>1.Library:</b> \n- MPAndroidChart \n- json_simple-1.1.jar \n- Android-Universal-Image-Loader</string>
    <string name="resource_license"><b>3.Resources:</b></string>
    <string name="backlink_license">1. icons8.com \n2. 365psd.com \n3. iconsolid.com</string>
    <string name="apache_license">http://www.apache.org/licenses/LICENSE-2.0.txt</string>
    <string name="app_feedback_exception_no_app_handle">No email app on your phone</string>
    <string name="sync_all_button">Sync all</string>
    <string name="category_cloud_name">Account</string>
    <string name="category_backup_option_name">Backup Option</string>
    <string name="cloud_sync_wifi_only_title">Wi-Fi only</string>
    <string name="cloud_sync_wifi_only_description">Using Wi-Fi only when auto save to cloud</string>
    <string name="cloud_sync_automatic_title">Automatic save to Cloud</string>
    <string name="cloud_sync_automatic_description">Auto save record when have new call and connection</string>
    <string name="no_internet">There is no connection internet</string>
    <string name="unlink_dropbox">You have not logged in Dropbox</string>
    <string name="warning_dialog_using_mobile_data_title">Warning</string>
    <string name="warning_dialog_using_mobile_data_des">You are connected to a mobile data network. Do you want to continue ?</string>
    <string name="sync_notification_ticker_text">Sync</string>
    <string name="sync_notification_content_text">Syncing to Dropbox</string>
    <string name="sync_notification_content_title">"Please wait..\."</string>
    <string name="storage_title">Storage</string>
    <string name="storage_btn_clear_data">Clear data</string>
    <string name="storage_graphic_data_title">DATA STORAGE</string>
    <string name="storage_graphic_free_space">Available</string>
    <string name="storage_graphic_used_record">Record data</string>
    <string name="storage_graphic_number_record">Records</string>
    <string name="storage_graphic_other_data">Others data</string>
    <string name="storage_graphic_name_folder">Name folder</string>
    <string name="dialog_change_name_folder_save_file">Folder save record</string>
    <string name="dialog_change_name_folder_save_file_description">Name : </string>
    <string name="dialog_clear_all_data_title">Clear data</string>
    <string name="dialog_clear_all_data_description">Are you sure delete all record in Inbox folder?</string>
    <string name="string_search_hint">Contact name,phone number,note</string>
    <string name="login_screen_title">Enter password</string>
    <string name="passcodelock_numpad_0">0</string>
    <string name="passcodelock_numpad_1">1</string>
    <string name="passcodelock_numpad_2">2</string>
    <string name="passcodelock_numpad_3">3</string>
    <string name="wrong_match_password">The password didn\'t match,please try again.</string>
    <string name="dialog_reset_password_new_pass">New Password</string>
    <string name="dialog_reset_password_old_pass">Old Password</string>
    <string name="dialog_setup_password_txt_confirm_pass">Confirm Password</string>
    <string name="rate_dialog_txt_inform">Do you like</string>
    <string name="rate_dialog_btn_rate_now">Rate now</string>
    <string name="rate_dialog_btn_rate_remind_late">Remind me later</string>
</resources>