<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextSwitcher
        android:id="@+id/dialog_reset_confirm_txt_waring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/wrong_match_password"
        android:textColor="#FF7F27"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog_reset_confirm_txt_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_txt_waring"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/dialog_reset_password_old_pass" />

    <EditText
        android:id="@+id/dialog_reset_confirm_edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_txt_old_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="numberPassword" >
    </EditText>

    <TextView
        android:id="@+id/dialog_reset_confirm_txt_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_edt_old_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/dialog_reset_password_new_pass" />

    <EditText
        android:id="@+id/dialog_reset_confirm_edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_txt_new_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4" >
    </EditText>

    <TextView
        android:id="@+id/dialog_reset_confirm_txt_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_edt_new_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/dialog_setup_password_txt_confirm_pass" />

    <EditText
        android:id="@+id/dialog_reset_confirm_edt_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_reset_confirm_txt_confirmpassword"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/dialog_reset_confirm_edt_confirmpassword"
        android:layout_marginTop="5dp"
        android:background="#BEBEBE" />

    <LinearLayout
        android:id="@+id/dialog_reset_confirm_ll_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/dialog_reset_confirm_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_light_theme_selector"
            android:text="@string/string_cancel" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#BEBEBE" />

        <Button
            android:id="@+id/dialog_reset_confirm_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_light_theme_selector"
            android:text="@string/string_ok"/>
    </LinearLayout>

</RelativeLayout>