<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/dialog_detail_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/dialog_detail_img_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:background="@color/colorNoAvatar"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_detail_txt_namecontact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="@dimen/dialog_detail_txt_namecontact_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_detail_txt_time"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/dialog_detail_txt_time_textsize"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingRight="1dp" >

            <ImageView
                android:id="@+id/dialog_detail_img_status"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical|right"
                android:contentDescription="@string/action_search"
                android:src="@drawable/ic_incoming" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/dialog_detail_ll_header"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/dialog_detail_ll_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_detail_txt_phonenumber_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_detail_phone_number" />

        <TextView
            android:id="@+id/dialog_detail_txt_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_detail_ll_filetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_detail_ll_phonenumber"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_detail_txt_filetype_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_detail_file_type" />

        <TextView
            android:id="@+id/dialog_detail_txt_filetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_detail_ll_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_detail_ll_filetype"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_detail_txt_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_detail_file_size" />

        <TextView
            android:id="@+id/dialog_detail_txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_detail_ll_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_detail_ll_size"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_detail_txt_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_detail_file_duration" />

        <TextView
            android:id="@+id/dialog_detail_txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_detail_ll_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_detail_ll_duration"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_detail_txt_path_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_detail_file_path" />

        <TextView
            android:id="@+id/dialog_detail_txt_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</RelativeLayout>